[FIXED] Spacing issue; the <br> was issue

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,10 @@
 
 /************** CUSTOMIZE COMPONENTS ***************/
 
+div {
+  margin-bottom: 0 !important;
+}
+
 /* textarea */
 
 textarea {
